# diagnostic_costs

./: .gitignore  00_setup.qmd  01_ingest.qmd  02_profile.qmd  03_variance.qmd  04_episode.qmd  05_benchmark.qmd  README.md  _common.py  _quarto.yml  pyproject.toml
data/medstar/: sources.txt
docs/superpowers/plans/: 2026-05-26-liver-biopsy-cost-notebooks.md
docs/superpowers/specs/: 2026-05-26-liver-biopsy-cost-notebooks-design.md
notebooks/: 00_setup.qmd  01_ingest.qmd  02_profile.qmd  03_variance.qmd  04_episode.qmd  05_simulation.qmd
queries/: diagnostic_cost.sql  hosp_costs.sql  liver_biopsy_cost.sql
tests/: test_common.py
