[project]
name = "diagnostic-costs"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Lyn",email = "lynma01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "polars (>=1.26.0,<2.0.0)",
    "duckdb (>=1.2.1,<2.0.0)",
    "duckdb-engine (>=0.15.0,<0.16.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "pyyaml>=6.0.3",
    "nbformat>=5.10.4",
    "nbclient>=0.10.4",
    "jupyter-client>=8.8.0",
    "jupyter>=1.1.1",
    "plotly>=6.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyarrow>=24.0.0",
    "pytest>=8.0",
]

[tool.uv]
package = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
